bk_ida/gccida/g3/oprs_unchanged_p
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/oprs_unchanged_p/src/gcse.c:1833:4: error: expected ';' after expression
rtx v13; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/oprs_unchanged_p/src/gcse.c:1833:5: error: use of undeclared identifier 'v13'
rtx v13; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/oprs_unchanged_p/src/gcse.c:1862:8: error: use of undeclared identifier 'reg_avail_info_0'; did you mean 'reg_avail_info'?
v10 = &reg_avail_info_0[rtx->fld[0].rtuint]; 
       ^~~~~~~~~~~~~~~~
       reg_avail_info
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/oprs_unchanged_p/src/gcse.c:1300:31: note: 'reg_avail_info' declared here
static struct reg_avail_info *reg_avail_info;
                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/oprs_unchanged_p/src/gcse.c:1865:21: error: use of undeclared identifier 'uid_cuid_1'
v18 = *( ( _DWORD *)uid_cuid_1 + insn->fld[0].rtint); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/oprs_unchanged_p/src/gcse.c:1871:7: error: use of undeclared identifier 'uid_cuid_1'; did you mean 'uid_cuid'?
v11 = uid_cuid_1; 
      ^~~~~~~~~~
      uid_cuid
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/oprs_unchanged_p/src/gcse.c:383:13: note: 'uid_cuid' declared here
static int *uid_cuid;
            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/oprs_unchanged_p/src/gcse.c:1872:21: error: use of undeclared identifier 'uid_cuid_1'
v12 = *( ( _DWORD *)uid_cuid_1 + insn->fld[0].rtint); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/oprs_unchanged_p/src/gcse.c:1873:1: error: use of undeclared identifier 'v13'
v13 = modify_mem_list[*( int *)( basic_block_info->data.l[current_bb] + 88)]; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/oprs_unchanged_p/src/gcse.c:1874:7: error: use of undeclared identifier 'v13'
if ( !v13 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/oprs_unchanged_p/src/gcse.c:1880:24: error: use of undeclared identifier 'v13'
v16.rtwint = ( __int64)v13->fld[0]; 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/oprs_unchanged_p/src/gcse.c:1886:1: error: use of undeclared identifier 'gcse_mem_operand'
gcse_mem_operand = rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/oprs_unchanged_p/src/gcse.c:1887:1: error: use of undeclared identifier 'gcse_mems_conflict_p'
gcse_mems_conflict_p = 0; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/oprs_unchanged_p/src/gcse.c:1889:6: error: use of undeclared identifier 'gcse_mems_conflict_p'
if ( gcse_mems_conflict_p ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/oprs_unchanged_p/src/gcse.c:1892:1: error: use of undeclared identifier 'v13'
v13 = ( rtx)v13[1]; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/oprs_unchanged_p/src/gcse.c:1893:7: error: use of undeclared identifier 'v13'
if ( !v13 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/oprs_unchanged_p/src/gcse.c:1895:7: error: use of undeclared identifier 'uid_cuid_1'; did you mean 'uid_cuid'?
v11 = uid_cuid_1; 
      ^~~~~~~~~~
      uid_cuid
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/oprs_unchanged_p/src/gcse.c:383:13: note: 'uid_cuid' declared here
static int *uid_cuid;
            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/oprs_unchanged_p/src/gcse.c:1902:24: error: use of undeclared identifier 'v13'
v14.rtwint = ( __int64)v13->fld[0]; 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/oprs_unchanged_p/src/gcse.c:1908:1: error: use of undeclared identifier 'gcse_mem_operand'
gcse_mem_operand = rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/oprs_unchanged_p/src/gcse.c:1909:1: error: use of undeclared identifier 'gcse_mems_conflict_p'
gcse_mems_conflict_p = 0; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/oprs_unchanged_p/src/gcse.c:1911:6: error: use of undeclared identifier 'gcse_mems_conflict_p'
if ( gcse_mems_conflict_p ) 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/oprs_unchanged_p/src/obj/gcse.o] Error 1
